--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, sans-serif;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+a {
+  display: block;
+  color: black;
+}
+
+body, html {
+  min-height: 100vh;
+}
