--- a/src/app/components/pageCMDB/componentsCMDB/serverPC/find-server/find-server.component.html
+++ b/src/app/components/pageCMDB/componentsCMDB/serverPC/find-server/find-server.component.html
@@ -1,6 +1,6 @@
 <div class="find-and-filter">
   <div class="input-filter-block">
-    <input (input)="findListInput()"
+    <input (input)="findServerInput()"
            [(ngModel)]="findServerByName"
            class="search-input"
            placeholder="Введите имя сервера или ПК"
